--- a/src/index.css
+++ b/src/index.css
@@ -5,35 +5,6 @@ Variables
 */
 
 :root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(162, 61%, 89%);
-    --clr-primary-2: hsl(162, 60%, 78%);
-    --clr-primary-3: hsl(162, 61%, 67%);
-    --clr-primary-4: hsl(162, 61%, 57%);
-    /* primary/main color */
-    --clr-primary-5: hsl(162, 73%, 46%);
-    /* lighter shades of primary color */
-    --clr-primary-6: #1aa179;
-    --clr-primary-7: #13795b;
-    --clr-primary-8: #0d503c;
-    --clr-primary-9: #06281e;
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(212, 33%, 89%);
-    --clr-grey-2: hsl(210, 31%, 80%);
-    --clr-grey-3: hsl(211, 27%, 70%);
-    --clr-grey-4: hsl(209, 23%, 60%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 28%, 39%);
-    --clr-grey-7: hsl(209, 34%, 30%);
-    --clr-grey-8: hsl(211, 39%, 23%);
-    --clr-grey-9: hsl(209, 61%, 16%);
-    --clr-white: #fff;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-black: #222;
     --transition: all 0.3s linear;
     --spacing: 0.1rem;
     --radius: 0.25rem;
@@ -41,7 +12,6 @@ Variables
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
     --max-width: 1170px;
     --fixed-width: 450px;
-    --clr-pink: #f28ab2;
   }
   /*
   =============== 
@@ -138,11 +108,12 @@ Variables
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: aliceblue;
   }
   
   .container {
     width: 90vw;
-    margin: 5rem 0;
+    margin:  0;
     max-width: var(--fixed-width);
     background: var(--clr-white);
     border-radius: var(--radius);
@@ -153,6 +124,7 @@ Variables
     font-weight: normal;
     text-transform: none;
     margin-bottom: 2rem;
+    
   }
   .person {
     display: grid;
@@ -186,7 +158,7 @@ Variables
     padding: 0.5rem 0;
     letter-spacing: var(--spacing);
     border-radius: var(--radius);
-    outline: 1px solid rgba(242, 138, 178, 0.8);
+    box-shadow: var(--dark-shadow);
     cursor: pointer;
   }
   
